--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "tailwind-scrollbar": "^2.1.0",
+    "vite": "^4.4.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
